Fix: Padding - Bookmark & History empty align #888

--- a/css/leptonChrome.css
+++ b/css/leptonChrome.css
@@ -10974,6 +10974,11 @@
       > .toolbarbutton-text {
       padding-inline-start: 0 !important;
     }
+    #panelMenu_bookmarksMenu .subviewbutton[disabled="true"],
+    #appMenu_historyMenu .subviewbutton[disabled="true"] {
+      margin-inline-start: 0 !important;
+      padding-inline-start: 0 !important;
+    }
     #panelMenu_bookmarksMenu .subviewbutton[disabled="true"] .toolbarbutton-text,
     #appMenu_historyMenu .subviewbutton[disabled="true"] .toolbarbutton-text {
       padding-inline-start: var(--arrowpanel-menublank-padding) !important;
@@ -25596,6 +25601,13 @@
   .toolbaritem-combined-buttons:not(.unified-extensions-item)
     > .subviewbutton:not(.subviewbutton-iconic)
     > .toolbarbutton-text {
+    padding-inline-start: 0 !important;
+  }
+}
+@media (not (-moz-bool-pref: "userChrome.icon.disabled")) and (-moz-bool-pref: "userChrome.icon.panel") {
+  #panelMenu_bookmarksMenu .subviewbutton[disabled="true"],
+  #appMenu_historyMenu .subviewbutton[disabled="true"] {
+    margin-inline-start: 0 !important;
     padding-inline-start: 0 !important;
   }
 }
