--- a/css/leptonChromeESR.css
+++ b/css/leptonChromeESR.css
@@ -11412,6 +11412,11 @@
       > .toolbarbutton-text {
       padding-inline-start: 0 !important;
     }
+    #panelMenu_bookmarksMenu .subviewbutton[disabled="true"],
+    #appMenu_historyMenu .subviewbutton[disabled="true"] {
+      margin-inline-start: 0 !important;
+      padding-inline-start: 0 !important;
+    }
     #panelMenu_bookmarksMenu .subviewbutton[disabled="true"] .toolbarbutton-text,
     #appMenu_historyMenu .subviewbutton[disabled="true"] .toolbarbutton-text {
       padding-inline-start: var(--arrowpanel-menublank-padding) !important;
